--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Crypto Asset Recovery - Recover funds from crypto scams and fraudulent investment platforms with expert support."/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Crypto Asset Recovery - Recover funds from crypto scams and fraudulent investment platforms with expert support.">
   <title>Crypto Asset Recovery | Recover Funds from Crypto Scams</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
-    body { line-height: 1.6; color: #222; background: #f9f9f9; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+    body {
+      line-height: 1.6;
+      color: #222;
+    }
     header {
       background: #000;
       padding: 1rem 2rem;
@@ -16,37 +25,57 @@
       align-items: center;
       justify-content: space-between;
     }
-    header img.logo { height: 50px; border-radius: 12px; }
+    header img.logo {
+      height: 50px;
+      border-radius: 12px;
+    }
     header nav a {
-      color: white; text-decoration: none;
-      margin-left: 1rem; font-weight: 600;
+      color: white;
+      text-decoration: none;
+      margin-left: 1rem;
+      font-weight: 600;
     }
     .hero {
       background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
-      color: white; text-align: center; padding: 6rem 2rem; position: relative;
+      color: white;
+      text-align: center;
+      padding: 6rem 2rem;
+      position: relative;
     }
     .hero::after {
-      content: ""; position: absolute; top: 0; left: 0;
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5); z-index: 0;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 0;
     }
-    .hero h1, .hero p { position: relative; z-index: 1; }
-    .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
+    .hero h1, .hero p {
+      position: relative;
+      z-index: 1;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
     .hero button {
-      background: #0f62fe; border: none; color: white;
-      padding: 0.75rem 1.5rem; font-size: 1rem;
-      border-radius: 5px; cursor: pointer;
+      background: #0f62fe;
+      border: none;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
-
     .section {
       padding: 4rem 2rem;
       max-width: 1000px;
       margin: auto;
-      background: white;
-      margin-bottom: 1rem;
     }
-
     .trusted-brands {
       display: flex;
       justify-content: space-around;
@@ -55,57 +84,34 @@
       flex-wrap: wrap;
     }
     .trusted-brands img {
-      max-height: 40px; margin: 0.5rem 1rem; opacity: 0.8;
+      max-height: 40px;
+      margin: 0.5rem 1rem;
+      opacity: 0.8;
     }
-
-    .faq-item {
-      margin-bottom: 1rem;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-    }
-    .faq-question {
-      font-weight: 600;
-      padding: 0.5rem;
-    }
-    .faq-answer {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.4s ease;
-      padding: 0 0.5rem;
-    }
-    .faq-item.open .faq-answer {
-      max-height: 200px;
-      padding-top: 0.5rem;
-    }
-
-    .case-studies {
-      background: #eef3fd;
-      padding: 2rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
-    }
-
     .testimonials {
       background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
-      color: white; padding: 4rem 2rem; text-align: center;
+      color: white;
+      padding: 4rem 2rem;
+      text-align: center;
       position: relative;
     }
     .testimonials::before {
-      content: ""; position: absolute; top: 0; left: 0;
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.6); z-index: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 0;
     }
     .testimonials > div {
-      position: relative; z-index: 1;
-      max-width: 800px; margin: auto;
+      position: relative;
+      z-index: 1;
     }
     .testimonial {
+      margin: 2rem auto;
+      max-width: 700px;
       font-style: italic;
-      font-size: 1.2rem;
-      min-height: 120px;
-      transition: opacity 0.5s ease;
     }
-
     form {
       display: flex;
       flex-direction: column;
@@ -119,11 +125,13 @@
     }
     form button {
       background: #0f62fe;
-      border: none; color: white;
-      padding: 0.75rem; border-radius: 4px;
-      font-size: 1rem; cursor: pointer;
+      border: none;
+      color: white;
+      padding: 0.75rem;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
     }
-
     footer {
       background: #111;
       color: white;
@@ -138,10 +146,10 @@
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/icNCu9P.png" class="logo" alt="Crypto Asset Recovery" />
+    <img src="https://i.imgur.com/icNCu9P.png" class="logo" alt="Crypto Asset Recovery">
     <nav>
       <a href="#">Home</a>
-      <a href="#services">Services</a>
+      <a href="#what-we-do">Services</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -152,102 +160,67 @@
     <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })">Get Help Now</button>
   </section>
 
-  <section class="section">
+  <section id="what-we-do" class="section">
     <h2>What We Do</h2>
-    <p>We specialize in helping victims of cryptocurrency scams and fraudulent investment platforms track and recover lost funds. Our expert team utilizes legal tools, blockchain analysis, and international resources to support recovery efforts quickly and securely.</p>
+    <p>We help victims of crypto fraud recover their lost assets through forensic blockchain analysis, legal coordination, and expert negotiation. Our team investigates fraudulent schemes and works to trace, freeze, and return stolen crypto assets.</p>
   </section>
 
   <section class="section">
     <h2>Why Choose Us</h2>
-    <ul style="list-style: disc; padding-left: 2rem;">
-      <li>No upfront fees – we only succeed when you do</li>
-      <li>Specialized expertise in crypto fraud investigation</li>
-      <li>Secure, confidential, and legally backed recovery process</li>
-      <li>Responsive support and dedicated case managers</li>
+    <ul>
+      <li>Expert blockchain forensic investigators</li>
+      <li>Global reach & partnerships with legal authorities</li>
+      <li>No upfront fees – we only get paid if you recover</li>
+      <li>Fast-track case assessments</li>
     </ul>
+  </section>
+
+  <section class="section" style="text-align: center;">
+    <h2>Certified & Trusted Experts</h2>
+    <p>Our team includes blockchain analysts and recovery experts with years of experience in crypto investigations.</p>
+    <img src="https://i.imgur.com/1Ul0nTo.png" alt="Verified Crypto Experts" style="max-width: 160px; margin: 1rem auto;">
   </section>
 
   <section class="section">
     <h2>Trusted by Clients & Featured In</h2>
     <div class="trusted-brands">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot" />
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/BBC_logo.png" alt="BBC" />
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Yahoo_Finance_Logo_2019.png" alt="Yahoo Finance" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/BBC_logo.png" alt="BBC">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Yahoo_Finance_Logo_2019.png" alt="Yahoo Finance">
     </div>
   </section>
 
   <section class="section">
     <h2>Frequently Asked Questions</h2>
-    <div class="faq-item">
-      <div class="faq-question">How long does recovery take?</div>
-      <div class="faq-answer">It depends on your case complexity, but most recoveries take 2–6 weeks on average.</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">Do I have to pay upfront?</div>
-      <div class="faq-answer">No. We operate on a success-based model. You only pay when funds are recovered.</div>
-    </div>
-    <div class="faq-item">
-      <div class="faq-question">What scams do you handle?</div>
-      <div class="faq-answer">We focus on crypto scams, investment frauds, fake exchanges, and phishing attacks.</div>
-    </div>
-  </section>
-
-  <section class="section case-studies">
-    <h2>Recent Case Highlights</h2>
-    <ul>
-      <li><strong>Robert T.</strong> – $370,000 recovered from a fraudulent ICO platform.</li>
-      <li><strong>Linda P.</strong> – $61,000 restored after loss to a fake brokerage site.</li>
-    </ul>
+    <p><strong>How long does recovery take?</strong> – It depends on your case complexity, but we begin investigation within 24 hours of intake.</p>
+    <p><strong>Do you guarantee recovery?</strong> – No one can guarantee recovery, but we have a strong success record and don’t charge unless recovery is achieved.</p>
+    <p><strong>What scams do you cover?</strong> – Crypto exchanges, fake investment platforms, pig-butchering scams, and wallet thefts.</p>
   </section>
 
   <section class="testimonials">
     <div>
       <h2>What Our Clients Say</h2>
-      <p class="testimonial" id="testimonial-text"></p>
+      <p class="testimonial">"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.</p>
+      <p class="testimonial">"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.</p>
+      <p class="testimonial">"I was scammed out of $370,000 in a fake trading group. They recovered it. I can't thank them enough." – Marcus T.</p>
+      <p class="testimonial">"My $61,000 was gone to a wallet scam – but now it's back. Best decision I made!" – Linda F.</p>
     </div>
   </section>
 
   <section id="contact" class="section">
     <h2>Free Case Evaluation</h2>
     <form>
-      <input type="text" placeholder="Full Name" required />
-      <input type="email" placeholder="Email Address" required />
+      <input type="text" placeholder="Full Name" required>
+      <input type="email" placeholder="Email Address" required>
       <textarea rows="5" placeholder="Describe your case..." required></textarea>
       <button type="submit">Submit</button>
     </form>
   </section>
 
   <footer>
-    <img src="https://i.imgur.com/icNCu9P.png" alt="Crypto Asset Recovery logo" />
+    <img src="https://i.imgur.com/icNCu9P.png" alt="Crypto Asset Recovery logo">
     <p>&copy; 2025 Crypto Asset Recovery. All rights reserved.</p>
     <p>Privacy Policy | Terms & Conditions</p>
   </footer>
-
-  <script>
-    // FAQ Toggle
-    document.querySelectorAll('.faq-item').forEach(item => {
-      item.addEventListener('click', () => item.classList.toggle('open'));
-    });
-
-    // Testimonial Carousel
-    const testimonials = [
-      '"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.',
-      '"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.',
-      '"I was scammed out of $370,000 in a fake ICO. These guys actually got it back. Incredible." – Robert T.',
-      '"After months of trying, they helped me recover $61,000 lost to a fake broker site. Game-changing service!" – Linda P.'
-    ];
-    let index = 0;
-    const testimonialEl = document.getElementById('testimonial-text');
-    function rotateTestimonial() {
-      testimonialEl.style.opacity = 0;
-      setTimeout(() => {
-        testimonialEl.textContent = testimonials[index];
-        testimonialEl.style.opacity = 1;
-        index = (index + 1) % testimonials.length;
-      }, 300);
-    }
-    rotateTestimonial();
-    setInterval(rotateTestimonial, 5000);
-  </script>
 </body>
 </html>
